<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Catalog</string>
    <string name="company_name">Nutrient</string>
    <string name="defaultExampleTitle">Default Example</string>
    <string name="defaultExampleDescription">Default PdfActivity example. Opens the demo document from assets without any customization.</string>
    <string name="playgroundExampleTitle">Playground Example</string>
    <string name="playgroundExampleDescription">Start here to customize the behavior of PdfActivity.</string>
    <string name="customActionsExampleTitle">Customized ActionBar Actions</string>
    <string name="customActionsExampleDescription">This example shows how to modify the default set of ActionBar icons to your app\'s needs.</string>
    <string name="toolbarsInFragmentExampleTitle">Custom Activity with Toolbars</string>
    <string name="toolbarsInFragmentExampleDescription">Use toolbars within the custom activity using PdfFragment.</string>
    <string name="formEditingInFragmentExampleTitle">Custom Activity with Form Editing UI</string>
    <string name="formEditingInFragmentExampleDescription">Use form editing UI within the custom activity using PdfFragment.</string>
    <string name="runtimeConfigurationChangeExampleTitle">Runtime Configuration Activity Example</string>
    <string name="runtimeConfigurationChangeExampleDescription">This example shows how to change activity configuration at runtime.</string>
    <string name="runtimeConfigurationFragmentExampleTitle">Runtime Configuration Fragment Example</string>
    <string name="runtimeConfigurationFragmentExampleDescription">This example shows how to change fragment configuration at runtime.</string>
    <string name="userInterfaceViewModesExampleTitle">User Interface View Modes Example</string>
    <string name="userInterfaceViewModesExampleDescription">This example shows how to change user interface view mode in custom Activity.</string>
    <string name="customLayoutExampleTitle">Custom Layout Example</string>
    <string name="customLayoutExampleDescription">Use some custom layout resources to alter the activity appearance.</string>
    <string name="externalDocumentExampleTitle">External Document</string>
    <string name="externalDocumentExampleDescription">Choose a document from the file system.</string>
    <string name="imageDocumentExampleTitle">Image Document</string>
    <string name="imageDocumentExampleDescription">This example shows how to open a demo image document from the assets folder.</string>
    <string name="inlineMultimediaExampleTitle">Inline Multimedia</string>
    <string name="inlineMultimediaExampleDescription">Embed videos and galleries within a PDF document.</string>
    <string name="dynamicMultimediaExampleTitle">Dynamic Multimedia Annotation</string>
    <string name="dynamicMultimediaExampleDescription">This example shows how to dynamically add multimedia annotations to a document.</string>
    <string name="passwordExampleTitle">Password Protected PDF</string>
    <string name="passwordExampleDescription">Password is: test123</string>
    <string name="darkThemeExampleTitle">Dark Theme</string>
    <string name="darkThemeExampleDescription">An example with applied custom theme.</string>
    <string name="fragmentExampleTitle">Fragment Example</string>
    <string name="fragmentExampleDescription">Shows how to create an activity using the PdfFragment.</string>
    <string name="simpleFragmentExampleTitle">Simple Fragment Example</string>
    <string name="simpleFragmentExampleDescription">Most basic implementation of PdfFragment in a custom activity.</string>
    <string name="randomDocumentReplacementExampleTitle">Random Document Replacement</string>
    <string name="randomDocumentReplacementExampleDescription">Stress test by constantly replacing the displayed document in random time intervals.</string>
    <string name="eLearningExampleTitle">E-Learning Example</string>
    <string name="eLearningExampleDescription">Shows how to swap between documents and sync view state, annotations, and bookmarks.</string>
    <string name="javaScriptActionExampleTitle">JavaScript Actions Example</string>
    <string name="javaScriptActionExampleDescription">Shows how to create and execute JavaScript actions.</string>
    <string name="javaScriptCalculatorExampleTitle">JavaScript Calculator Example</string>
    <string name="javaScriptCalculatorExampleDescription">Basic calculator app implemented completely in PDF JavaScript.</string>
    <string name="jetpackExampleTitle">Basic Example</string>
    <string name="jetpackExampleDescription">Example of how to integrate Nutrient in a Jetpack compose application.</string>
    <string name="jetpackImageExampleTitle">Image Example</string>
    <string name="jetpackImageExampleDescription">Example of how to load an image using Nutrient in a Jetpack compose application.</string>
    <string name="thumbnailBarExampleTitle">Thumbnail Bar Example</string>
    <string name="thumbnailBarExampleDescription">Demonstrates how to toggle between different thumbnail bar modes: Floating, Pinned, Scrollable, and None.</string>
    <string name="jetpackAiAssistantExampleTitle">AI Assistant Compose</string>
    <string name="jetpackAiAssistantExampleDescription">AI chat for intelligent document analysis and interaction using our Jetpack Compose API. You must also run the AI Assistant demo server on your Machine.</string>
    <string name="jetpackAiAssistantMultiDocExampleTitle">AI Assistant Multiple Documents: Compose HorizontalPager</string>
    <string name="jetpackAiAssistantMultiDocExampleDescription">AI chat for intelligent document analysis and interaction with multiple documents using HorizontalPager in Jetpack Compose. You must also run the AI Assistant demo server on your Machine.</string>
    <string name="aiAssistantTabbedDocumentExampleTitle">AI Assistant Multiple Documents: DocumentCoordinator</string>
    <string name="aiAssistantTabbedDocumentExampleDescription">Example demonstrating AI chat for multiple documents analysis and interaction using DocumentCoordinator. You must also run the AI Assistant demo server on your Machine.</string>
    <string name="aiAssistantViewPagerExampleTitle">AI Assistant Multiple Documents: ViewPager</string>
    <string name="aiAssistantViewPagerExampleDescription">Example demonstrating AI chat for multiple documents analysis and interaction using ViewPager. You must also run the AI Assistant demo server on your Machine.</string>
    <string name="splitDocumentExampleTitle">Document Split-view</string>
    <string name="splitDocumentExampleDescription">Usage example for two PdfFragment instances sitting side-by-side in a single activity.</string>
    <string name="memoryDataProviderExampleTitle">MemoryDataProvider</string>
    <string name="memoryDataProviderExampleDescription">Loading a document from a byte-array using the MemoryDataProvider.</string>
    <string name="aesExampleTitle">AES Encrypted File Example</string>
    <string name="aesExampleDescription">Open AES encrypted PDFs without decrypting them first.</string>
    <string name="documentSwitcherExampleTitle">Document Switcher</string>
    <string name="documentSwitcherExampleDescription">Switching between documents using a side navigation drawer.</string>
    <string name="documentTabsExampleTitle">Tabbed Documents</string>
    <string name="documentTabsExampleDescription">Opens multiple documents in a tabbed interface.</string>
    <string name="persistentTabsExampleTitle">Persistent Tabs</string>
    <string name="persistentTabsExampleDescription">Shows how to retain list of open tabs.</string>
    <string name="customDataProviderExampleTitle">Custom Data Provider</string>
    <string name="customDataProviderExampleDescription">How to implement a DataProvider that can be used with PdfActivity.</string>
    <string name="remoteUrlDataProviderExampleTitle">Download from Remote URL</string>
    <string name="remoteUrlDataProviderExampleDescription">Shows how to download and display a remote document using the UrlDataProvider.</string>
    <string name="zoomExampleTitle">Zoom Example</string>
    <string name="zoomExampleDescription">Zooming to certain page objects.</string>
    <string name="viewPager2ExampleTitle">ViewPager2 Example</string>
    <string name="viewPager2ExampleDescription">Demonstrates using multiple documents in a Viewpager2</string>
    <string name="simplePdfViewPagerExampleTitle">Simple PDF ViewPager</string>
    <string name="simplePdfViewPagerExampleDescription">Simple example showing PdfUiFragment with ViewPager2 and TabLayout - 4 PDFs in tabs</string>
    <string name="formFillingExampleTitle">Form Filling</string>
    <string name="formFillingExampleDescription">Shows how to fill forms programmatically.</string>
    <string name="formTextFieldSuggestionsExampleTitle">Form text field suggestions</string>
    <string name="formTextFieldSuggestionsExampleDescription">Demonstrates how to add suggestions to form text fields.</string>
    <string name="formFillingJavaScriptExampleTitle">JavaScript Form Filling</string>
    <string name="formFillingJavaScriptExampleDescription">Shows how to fill forms with JavaScript.</string>
    <string name="javaScriptFormsExampleTitle">Forms JavaScript</string>
    <string name="javaScriptFormsExampleDescription">Showcases how to use forms JavaScript.</string>
    <string name="formCreationExampleTitle">Form Creation</string>
    <string name="formCreationExampleDescription">Shows how to create forms programmatically.</string>
    <string name="formInterceptExampleTitle">Form Intercept with Compose</string>
    <string name="formInterceptExampleDescription">Shows how to intercept form click with the `DocumentView` Composable.</string>
    <string name="documentFromCanvasExampleTitle">Document Creation From Canvas</string>
    <string name="documentFromCanvasExampleDescription">Shows how to create a document programmatically using an Android canvas.</string>
    <string name="customFormHighlightColorExampleTitle">Custom Form Highlight Color</string>
    <string name="customFormHighlightColorExampleDescription">Shows how to toggle the form highlight color.</string>
    <string name="navHostExampleTitle">Compose Navigation</string>
    <string name="navHostExampleDescription">Shows how to use DocumentView Composable in NavHost.</string>
    <string name="annotationCreationExampleTitle">Annotation Creation</string>
    <string name="annotationCreationExampleDescription">Programmatic creation of annotations.</string>
    <string name="useComposeForInstantExample">Use Jetpack Compose</string>
    <string name="instant_description">With Nutrient Instant (Document Engine), it’s easier than ever to add real-time collaboration features to your Nutrient-powered app, allowing your users to seamlessly share, edit and annotate PDF documents across iOS, Android and Web apps.\n\nThe Nutrient SDKs for Android, iOS and Web support Instant out of the box. Just connect your app to an Instant (Document Engine) server and document management and syncing is taken care of.\n\nYou can try this right here, by getting a new copy of the document or copying the URL for an existing document from nutrient.io/demo</string>
    <string name="instant_create_new_document">Create New Document</string>
    <string name="instant_create_new_document_description">Get a new document code, then collaborate by opening the document link in a web browser or scanning its QR code in Nutrient Catalog on another device.</string>
    <string name="instant_scan_qr_code">Scan QR code</string>
    <string name="instant_edit_existing_document_description">Scan the QR code from nutrient.io/demo to connect to the document shown in your browser.\n\nAlternatively:</string>
    <string name="instant_enter_link_manually">Enter Link Manually …</string>
</resources>