<?xml version="1.0" encoding="utf-8"?>
<!--
  ~   Copyright © 2017-2025 PSPDFKit GmbH. All rights reserved.
  ~
  ~   The PSPDFKit Sample applications are licensed with a modified BSD license.
  ~   Please see License for details. This notice may not be removed from this file.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:isScrollContainer="true">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentTop="true"
            android:background="?colorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top"
        android:isScrollContainer="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autoLink="web"
                android:text="@string/instant_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_use_compose"
                style="@style/Widget.AppCompat.CompoundButton.Switch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:checked="false"
                android:drawableStart="@drawable/ic_jetpack_compose"
                android:drawablePadding="4dp"
                android:text="@string/useComposeForInstantExample"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:background="?android:attr/listDivider" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_new_document"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/instant_create_new_document"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instant_create_new_document_description"
                android:layout_marginBottom="32dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/scan_qr_code"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/instant_scan_qr_code"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/instant_edit_existing_document_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/enter_link_manually"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/instant_enter_link_manually"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>